--- a/src/scss/main-style.scss
+++ b/src/scss/main-style.scss
@@ -1,9 +1,12 @@
 //----------Imports--------------
 
 @import 'header';
+@import 'headersearch';
 @import 'hero';
 @import 'main';
 @import 'footer';
+@import 'herosearch';
+@import 'main-search';
 
 //------ Common styles-----------
 
