--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -242,6 +242,11 @@
                         }
     
                     }
+                    .item-carrousel:hover {
+                        -webkit-transform: scale(1.2);
+                        transform: scale(1.2);
+                        z-index: 10;
+                    }
     
                 }
 
@@ -298,7 +303,7 @@
             #i8:checked ~ #eight,
             #i9:checked ~ #nine {
                 z-index: 9;
-	            animation: scroll 4s ease-in-out;
+                animation: scroll 4s ease-in-out;
             }          
 
         }
@@ -333,138 +338,4 @@
 
     }
 
-}
-
-.footer {
-    background-color: white;
-    
-    .info-footer {
-        width: $desktopwidth;
-        border-top: 1px solid $secondarycolor;
-        border-bottom: 2px solid $secondarycolor;
-
-        .logo-footer {
-            width: 40%;
-            margin: 0;
-            margin-left: 5rem;
-            padding: 2rem 0;
-
-            .img-footer {
-                img {
-                    width: 50rem;
-                    height: 20rem;
-                }
-            }
-
-            .logo-footer-description {
-                padding: 1.5rem;
-                color: $secondarycolor;
-            }
-            
-        }
-
-        .footer-lists {
-            width: 60%;
-            margin: 0;
-            padding: 2rem 0;
-            margin-right: 5rem;
-
-            .column-list {
-                .title-list{
-                    color: $primarycolor;
-                    border-bottom: 2px solid $primarycolor;
-                }
-
-                .one-list {
-                    ul {
-                        list-style: none;
-                        li {
-                            padding: 1rem 0;
-                            a {
-                                text-decoration: none;
-                                color: $secondarycolor;
-                                font-size: 1.5rem;
-                                font-weight: bold;
-                            }
-
-                            a:hover {
-                                text-decoration: underline;
-                                color: $primarycolor;
-                                text-decoration-color: $primarycolor;
-                                font-size: 2.2rem;
-                            }
-                        }
-                    }
-                }
-                
-            }
-            
-            .last-list{
-                align-items: center;
-                .two-list {
-                    ul {
-                        list-style: none;
-                        li {
-                            padding: 2rem 0;
-                            .a-one {
-                                text-decoration: none;
-                                color: $primarycolor;
-                                font-size: 1.5rem;
-                                font-weight: bold;
-                                width: 50%;
-                            }
-
-                        }
-                    }
-                }
-
-                .twopoint-list {
-                    ul {
-                        list-style: none;
-                        li{
-                           padding: 2rem 0;
-                           .a-two {
-                            text-decoration: none;
-                            color: $secondarycolor;
-                            padding: 1.3rem 1.5rem;
-                            border: 1px solid grey;
-                            border-radius: 0.4rem;
-                            margin-left: 1rem;
-                            width: 50%;
-                            }
-                            .a-two:hover {
-                                font-size: 2.2rem;
-                                background-color:$thirdcolor;
-                                text-decoration: underline;
-                                color: $primarycolor;
-                            } 
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    .copy-right-footer{
-        width: $desktopwidth;
-        border-top: 1px solid $secondarycolor;
-        align-items: center;
-        justify-content: space-between;
-        padding: 3rem 0;
-        .letters-footer {
-            margin: 0 0 0 5rem;
-            font-size: 1.7rem;
-            color: $secondarycolor;
-        }
-
-        .social-links {
-            margin: 0 5rem 0 0; 
-            a {
-                padding: 1rem;
-                font-size: 4rem;
-                color: $secondarycolor;
-            }
-        }
-        
-    }
 }
