--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,7 @@ $fourthcolor: #fcfcfc;
 $fifthcolor: #f6f6f6;
 $nav_color: rgba(163, 163, 163, 0.7);
 $nav_hover_color: rgb(209, 73, 107, .8);
+$thirdcolohover: rgb(109, 107, 107);
 
 
 //Typography
