--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -78,7 +78,7 @@
 .headers .headers-container {
   align-items: center;
   justify-content: space-between;
-  font-size: 2.2rem;
+  font-size: 1.7rem;
   width: 70%;
 }
 .headers .logo-headers {
@@ -102,6 +102,9 @@
 }
 .headers .navbar-headers li {
   margin: auto 1rem;
+}
+.headers .navbar-headers li i {
+  margin-right: 1rem;
 }
 .headers .navbar-headers .home-headers {
   color: #D35266;
@@ -141,6 +144,61 @@
   font-size: 4rem;
 }
 
+@media screen and (min-width: 1089px) and (max-width: 1440px) {
+  .headers .headers-container {
+    font-size: 1.3rem;
+    width: 80%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1088px) {
+  .headers .headers-container {
+    font-size: 1rem;
+    width: 90%;
+  }
+}
+@media screen and (min-width: 483px) and (max-width: 767px) {
+  .headers .headers-container {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    font-size: 0.8rem;
+    width: 100%;
+  }
+  .headers .headers-container .headers-container-left .navbar-headers ul {
+    flex-wrap: wrap;
+  }
+  .headers .headers-container .headers-container-left .navbar-headers ul li {
+    padding-bottom: 1.5rem;
+  }
+  .headers .headers-container .headers-container-right {
+    margin-left: 15rem;
+    margin-bottom: 2rem;
+  }
+  .headers .headers-container .headers-container-right .User {
+    font-size: 2rem;
+  }
+}
+@media screen and (max-width: 483px) {
+  .headers .headers-container {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    font-size: 0.8rem;
+    width: 100%;
+  }
+  .headers .headers-container .headers-container-left .navbar-headers ul {
+    flex-wrap: wrap;
+  }
+  .headers .headers-container .headers-container-left .navbar-headers ul li {
+    padding: 1.5rem;
+    margin: auto;
+  }
+  .headers .headers-container .headers-container-right {
+    margin-left: 15rem;
+    margin-bottom: 2rem;
+  }
+  .headers .headers-container .headers-container-right .User {
+    font-size: 2rem;
+  }
+}
 .hero {
   background-color: #D35266;
   background-image: url(../img/logo-header2.png);
@@ -511,6 +569,35 @@
   padding: 2rem 0;
   margin-right: 5rem;
 }
+.footer .info-footer .footer-lists .footer-lists1 .column-list {
+  margin: 0 2rem;
+  width: 25%;
+}
+.footer .info-footer .footer-lists .footer-lists1 .column-list .title-list {
+  color: #D35266;
+  border-bottom: 2px solid #D35266;
+}
+.footer .info-footer .footer-lists .footer-lists1 .column-list .one-list ul {
+  list-style: none;
+}
+.footer .info-footer .footer-lists .footer-lists1 .column-list .one-list ul li {
+  padding: 1rem 0;
+}
+.footer .info-footer .footer-lists .footer-lists1 .column-list .one-list ul li a {
+  text-decoration: none;
+  color: #888888;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.footer .info-footer .footer-lists .footer-lists1 .column-list .one-list ul li a:hover {
+  text-decoration: underline;
+  color: #D35266;
+  text-decoration-color: #D35266;
+  font-size: 2.2rem;
+}
+.footer .info-footer .footer-lists .column-list {
+  margin: 0 2rem;
+}
 .footer .info-footer .footer-lists .column-list .title-list {
   color: #D35266;
   border-bottom: 2px solid #D35266;
@@ -535,6 +622,7 @@
 }
 .footer .info-footer .footer-lists .last-list {
   align-items: center;
+  width: 25%;
 }
 .footer .info-footer .footer-lists .last-list .two-list ul {
   list-style: none;
@@ -570,6 +658,9 @@
   text-decoration: underline;
   color: #D35266;
 }
+.footer .info-footer .footer-lists-tow {
+  display: none;
+}
 .footer .copy-right-footer {
   width: 70%;
   border-top: 1px solid #888888;
@@ -591,6 +682,75 @@
   color: #888888;
 }
 
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+  .footer .info-footer {
+    width: 80%;
+  }
+  .footer .info-footer .logo-footer {
+    margin: 0 5rem;
+  }
+  .footer .info-footer .logo-footer .img-footer img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+@media screen and (min-width: 300px) and (max-width: 1024px) {
+  .footer .info-footer {
+    width: 100%;
+  }
+  .footer .info-footer .logo-footer {
+    margin: 0 1rem;
+  }
+  .footer .info-footer .logo-footer .img-footer img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .footer .info-footer .footer-lists {
+    display: none;
+  }
+  .footer .info-footer .footer-lists-tow {
+    display: block;
+    width: 60%;
+  }
+  .footer .info-footer .footer-lists-tow .footer-two-title {
+    padding: 1rem;
+    border-bottom: 1px solid rgba(163, 163, 163, 0.7);
+    font-family: Gotham;
+    font-size: 2rem;
+    color: #D35266;
+  }
+  .footer .info-footer .footer-lists-tow .footer-two-categ ul {
+    list-style: none;
+    padding: 1rem;
+  }
+  .footer .info-footer .footer-lists-tow .footer-two-categ ul li {
+    padding: 1rem 1rem;
+    margin: 1rem 0;
+    border: 1px solid #888888;
+    border-radius: 0.4rem;
+  }
+  .footer .info-footer .footer-lists-tow .footer-two-categ ul li a {
+    text-decoration: none;
+    color: #888888;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  .footer .info-footer .footer-lists-tow .footer-two-categ ul li a:hover {
+    color: #D35266;
+    font-size: 1.7rem;
+  }
+  .footer .copy-right-footer {
+    width: 100%;
+  }
+  .footer .copy-right-footer .letters-footer {
+    font-size: 1.5rem;
+  }
+  .footer .copy-right-footer .social-links a {
+    font-size: 3rem;
+  }
+}
 .hero-search {
   background-color: #D35266;
   background-image: url(../img/logo-header.png);
@@ -620,32 +780,33 @@
   align-items: center;
   width: 70%;
 }
-.hero-search .inputs-hero {
+.hero-search .navbar-hero-search .inputs-hero {
   margin: 0;
   height: fit-content;
   align-items: center;
+  width: 70%;
 }
-.hero-search .inputs-hero input {
-  padding: 1rem;
-  margin: 0;
-  outline: none;
-  width: 30rem;
-}
-.hero-search .styles-input-hero {
+.hero-search .navbar-hero-search .inputs-hero .styles-input-hero {
   background-color: white;
-  width: 20rem;
+  width: 33%;
   height: 100%;
   padding: 1.3rem;
   margin: 0;
   text-decoration: none;
   color: #888888;
 }
-.hero-search .styles-input-hero i {
+.hero-search .navbar-hero-search .inputs-hero .styles-input-hero i {
   color: #383838;
   padding: 0 0.5rem;
 }
-.hero-search .search-button-hero {
-  margin: 0 0 0 2rem;
+.hero-search .navbar-hero-search .inputs-hero input {
+  padding: 1rem;
+  margin: 0;
+  outline: none;
+  width: 33%;
+}
+.hero-search .navbar-hero-search .search-button-hero {
+  margin: 0 0 0 auto;
   background-color: #383838;
   width: 10rem;
   height: 100%;
@@ -654,6 +815,44 @@
   color: #888888;
 }
 
+@media screen and (min-width: 928px) and (max-width: 1440px) {
+  .hero-search {
+    background-size: 20rem;
+    background-position-x: 0.8rem;
+  }
+  .hero-search .hero-search-title {
+    width: 80%;
+  }
+  .hero-search .navbar-hero-search {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 510px) and (max-width: 927px) {
+  .hero-search {
+    background-size: 20rem;
+    background-position-x: 0.8rem;
+  }
+  .hero-search .hero-search-title {
+    width: 100%;
+  }
+  .hero-search .navbar-hero-search {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 300px) and (max-width: 509px) {
+  .hero-search .navbar-hero-search {
+    flex-direction: column;
+  }
+  .hero-search .navbar-hero-search .inputs-hero {
+    flex-direction: column;
+  }
+  .hero-search .navbar-hero-search .inputs-hero input {
+    margin: 1rem;
+  }
+  .hero-search .navbar-hero-search .search-button-hero {
+    margin: 1rem;
+  }
+}
 .main-search {
   background-color: #f6f6f6;
 }
@@ -705,6 +904,9 @@
   color: #888888;
   font-size: 1.3rem;
 }
+.main-search .main-search-container .results .results-item {
+  margin-bottom: 5rem;
+}
 .main-search .main-search-container .results .results-item .results-item-img {
   position: relative;
   top: 0;
@@ -741,6 +943,8 @@
   font-size: 1.7rem;
   font-family: Gotham;
   margin-bottom: 1rem;
+  margin-left: 0;
+  width: 90%;
 }
 .main-search .main-search-container .results .results-item .results-item-description span {
   color: #D35266;
@@ -768,6 +972,7 @@
   color: #888888;
   font-size: 1.5rem;
   font-family: Gotham Rounded;
+  height: 10rem;
 }
 .main-search .main-search-container .results .results-item .results-item-description .results-details {
   justify-content: flex-start;
@@ -786,7 +991,6 @@
   justify-content: space-between;
   height: 20%;
   align-items: center;
-  margin-top: 5rem;
   font-size: 1.7rem;
 }
 .main-search .main-search-container .results .results-item .results-item-description .buttons-results .buttons-right,
@@ -805,6 +1009,125 @@
   border-radius: 0.4rem;
 }
 
+@media screen and (min-width: 1024px) and (max-width: 1440px) {
+  .main-search .main-search-container {
+    width: 80%;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img img {
+    width: 20rem;
+    height: 20rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img .results-img-arrow {
+    padding: 0.5rem 1rem;
+    bottom: 1.2rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description h3 {
+    margin-left: 0;
+    font-size: 1.5rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .results-text {
+    height: 5rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .buttons-results .buttons-right .hidden-button {
+    display: none;
+  }
+}
+@media screen and (min-width: 510px) and (max-width: 1023px) {
+  .main-search .main-search-container {
+    width: 100%;
+  }
+  .main-search .main-search-container .results .results-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img img {
+    width: 20rem;
+    height: 20rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img .results-img-arrow {
+    padding: 0.5rem 1rem;
+    bottom: 1.2rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description h3 {
+    margin-left: 0;
+    font-size: 1.5rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .results-text {
+    height: 5rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .buttons-results .buttons-right .hidden-button {
+    display: none;
+  }
+}
+@media screen and (min-width: 375px) and (max-width: 509px) {
+  .main-search .main-search-container {
+    width: 100%;
+  }
+  .main-search .main-search-container .results .results-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img img {
+    width: 20rem;
+    height: 20rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img .results-img-arrow {
+    padding: 0.5rem 1rem;
+    bottom: 1.2rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description h3 {
+    margin-left: 0;
+    font-size: 1.5rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .results-text {
+    height: 7rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .buttons-results .buttons-right .hidden-button {
+    display: none;
+  }
+}
+@media screen and (max-width: 374px) {
+  .main-search .main-search-container {
+    width: 100%;
+  }
+  .main-search .main-search-container .filters {
+    padding: 0 1rem;
+    width: 25%;
+  }
+  .main-search .main-search-container .filters .filters-control h3 {
+    font-size: 1rem;
+  }
+  .main-search .main-search-container .filters .filters-control h4 {
+    font-size: 1rem;
+    padding: 1rem 0.5rem;
+    margin: 0;
+  }
+  .main-search .main-search-container .results {
+    width: 75%;
+  }
+  .main-search .main-search-container .results .results-item {
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img img {
+    width: 20rem;
+    height: 20rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-img .results-img-arrow {
+    padding: 0.5rem 1rem;
+    bottom: 1.2rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description h3 {
+    margin-left: 0;
+    font-size: 1.5rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .results-text {
+    height: 9rem;
+  }
+  .main-search .main-search-container .results .results-item .results-item-description .buttons-results .buttons-right .hidden-button {
+    display: none;
+  }
+}
 *,
 *::before,
 *::after {
