--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -33,8 +33,43 @@
             margin: 0;
             padding: 2rem 0;
             margin-right: 5rem;
+            .footer-lists1 {
+                
+                .column-list {
+                    margin: 0 2rem;
+                    width: 25%;
+                    .title-list{
+                        color: $primarycolor;
+                        border-bottom: 2px solid $primarycolor;
+                    }
+    
+                    .one-list {
+                        ul {
+                            list-style: none;
+                            li {
+                                padding: 1rem 0;
+                                a {
+                                    text-decoration: none;
+                                    color: $secondarycolor;
+                                    font-size: 1.5rem;
+                                    font-weight: bold;
+                                }
+    
+                                a:hover {
+                                    text-decoration: underline;
+                                    color: $primarycolor;
+                                    text-decoration-color: $primarycolor;
+                                    font-size: 2.2rem;
+                                }
+                            }
+                        }
+                    }
+                    
+                } 
+            }
 
             .column-list {
+                margin: 0 2rem;
                 .title-list{
                     color: $primarycolor;
                     border-bottom: 2px solid $primarycolor;
@@ -66,6 +101,7 @@
             
             .last-list{
                 align-items: center;
+                width: 25%;
                 .two-list {
                     ul {
                         list-style: none;
@@ -108,6 +144,10 @@
                 }
             }
         }
+
+        .footer-lists-tow {
+            display: none;
+        }
     }
 
     .copy-right-footer{
@@ -131,5 +171,94 @@
             }
         }
         
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+    .footer {
+        .info-footer {
+            width: 80%;
+            .logo-footer {
+                margin: 0 5rem;
+                .img-footer {
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 300px) and (max-width: 1024px) {
+    .footer {
+        .info-footer {
+            width: $movilwidth;
+            .logo-footer {
+                margin: 0 1rem;
+                .img-footer {
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+            }
+            .footer-lists {
+                display: none;
+            }
+
+            .footer-lists-tow {
+                display: block;
+                width: 60%;
+
+                .footer-two-title {
+                    padding: 1rem;
+                    border-bottom: 1px solid $nav_color;
+                    font-family: $firstfont;
+                    font-size: 2rem;
+                    color: $primarycolor;
+                }
+                .footer-two-categ {
+                    ul {
+                        list-style: none;
+                        padding: 1rem;
+                        li {
+                            padding: 1rem 1rem;
+                            margin: 1rem 0;
+                            border: 1px solid $secondarycolor;
+                            border-radius: .4rem;
+                            a {
+                                text-decoration: none;
+                                color: $secondarycolor;
+                                font-size: 1.5rem;
+                                font-weight: bold;
+                            }
+
+                            a:hover {
+                                color: $primarycolor;
+                                font-size: 1.7rem;
+                            }
+
+                        }
+                    }
+                }
+
+                
+            }
+        }
+        .copy-right-footer {
+            width: $movilwidth;
+            .letters-footer {
+                font-size: 1.5rem;
+            }
+            .social-links {
+                a {
+                    font-size: 3rem;
+                }
+            }
+        }
     }
 }
