--- a/src/scss/_herosearch.scss
+++ b/src/scss/_herosearch.scss
@@ -30,43 +30,89 @@
         justify-content: flex-start;
         align-items: center;
         width: $desktopwidth;
-    }
-
-    .inputs-hero {
-        margin: 0;
-        height: fit-content;
-        align-items: center;
-        input {
-            padding: 1rem;
+        .inputs-hero {
             margin: 0;
-            outline: none;
-            width: 30rem;
+            height: fit-content;
+            align-items: center;
+            width: $desktopwidth;
+            .styles-input-hero {
+                background-color: white;
+                width: 33%;
+                height: 100%;
+                padding: 1.3rem;
+                margin: 0;
+                text-decoration: none;
+                color: $secondarycolor;
+        
+                i {
+                    color: $thirdcolor;
+                    padding: 0 0.5rem;
+                }
+            }
+            input {
+                padding: 1rem;
+                margin: 0;
+                outline: none;
+                width: 33%;
+            }
+      
+        }
+    
+        .search-button-hero {
+            margin: 0 0 0 auto;
+            background-color: $thirdcolor;
+            width: 10rem;
+            height: 100%;
+            padding: 1.3rem;
+            text-decoration: none;
+            color: $secondarycolor;
         }
     }
+}
 
-    .styles-input-hero {
-        background-color: white;
-        width: 20rem;
-        height: 100%;
-        padding: 1.3rem;
-        margin: 0;
-        text-decoration: none;
-        color: $secondarycolor;
-
-        i {
-            color: $thirdcolor;
-            padding: 0 0.5rem;
+@media screen and (min-width: 928px) and (max-width: 1440px) {
+    .hero-search {
+        background-size: 20rem;
+        background-position-x: .8rem;
+        .hero-search-title {
+            width: 80%;
+            
+        }
+        .navbar-hero-search {
+            width: 80%;
         }
     }
+}
 
-    .search-button-hero {
-        margin: 0 0 0 2rem;
-        background-color: $thirdcolor;
-        width: 10rem;
-        height: 100%;
-        padding: 1.3rem;
-        text-decoration: none;
-        color: $secondarycolor;
+@media screen and (min-width: 510px) and (max-width: 927px) {
+    .hero-search {
+        background-size: 20rem;
+        background-position-x: .8rem;
+        .hero-search-title {
+            width: $movilwidth;
+            
+        }
+        .navbar-hero-search {
+            width: $movilwidth;
+        }
+    }
+}
+
+@media screen and (min-width: 300px) and (max-width: 509px) {
+    .hero-search {
+        .navbar-hero-search {
+            flex-direction: column;
+            .inputs-hero {
+                flex-direction: column;
+                input {
+                    margin: 1rem;
+                }
+            }
+    
+            .search-button-hero {
+                margin: 1rem;
+            }
+        }
     }
 
 }
