--- a/src/scss/_main-search.scss
+++ b/src/scss/_main-search.scss
@@ -49,6 +49,7 @@
             }
 
             .results-item {
+                margin-bottom: 5rem;
                 .results-item-img{
                     position: relative;
                     top: 0;
@@ -86,6 +87,8 @@
                         font-size: 1.7rem;
                         font-family: $firstfont;
                         margin-bottom: 1rem;
+                        margin-left: 0;
+                        width: 90%;
                     }
 
                     span {
@@ -116,6 +119,7 @@
                         color: $secondarycolor;
                         font-size: 1.5rem;
                         font-family: $thirdfont;
+                        height: 10rem;
                     }
 
                     .results-details {
@@ -136,7 +140,6 @@
                         justify-content: space-between;
                         height: 20%;
                         align-items: center;
-                        margin-top: 5rem;
                         font-size: 1.7rem;
                         .buttons-right,
                         .buttons-left {
@@ -162,5 +165,182 @@
 
         }
     
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1440px){
+    .main-search {
+        .main-search-container {
+            width: 80%;
+            .results {
+                .results-item {
+                    .results-item-img {
+                        img {
+                            width: 20rem;
+                            height: 20rem;
+                        }
+                        .results-img-arrow {
+                            padding: .5rem 1rem;
+                            bottom: 1.2rem;
+                        }
+                    }
+                    .results-item-description {
+                        h3 {
+                            margin-left: 0;
+                            font-size: 1.5rem;
+                        }
+                        .results-text {
+                            height: 5rem;
+                        }
+                        .buttons-results {
+                            .buttons-right{
+                                .hidden-button {
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+@media screen and (min-width: 510px) and (max-width: 1023px) {
+    .main-search {
+        .main-search-container {
+            width: $movilwidth;
+            .results {
+                .results-item {
+                    flex-direction: column;
+                    align-items: center;
+                    .results-item-img {
+                        img {
+                            width: 20rem;
+                            height: 20rem;
+                        }
+                        .results-img-arrow {
+                            padding: .5rem 1rem;
+                            bottom: 1.2rem;
+                        }
+                    }
+                    .results-item-description {
+                        h3 {
+                            margin-left: 0;
+                            font-size: 1.5rem;
+                        }
+                        .results-text {
+                            height: 5rem;
+                        }
+                        .buttons-results {
+                            .buttons-right{
+                                .hidden-button {
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+@media screen and (min-width: 375px) and (max-width: 509px) {
+    .main-search {
+        .main-search-container {
+            width: $movilwidth;
+            .results {
+                .results-item {
+                    flex-direction: column;
+                    align-items: center;
+                    .results-item-img {
+                        img {
+                            width: 20rem;
+                            height: 20rem;
+                        }
+                        .results-img-arrow {
+                            padding: .5rem 1rem;
+                            bottom: 1.2rem;
+                        }
+                    }
+                    .results-item-description {
+                        h3 {
+                            margin-left: 0;
+                            font-size: 1.5rem;
+                        }
+                        .results-text {
+                            height: 7rem;
+                        }
+                        .buttons-results {
+                            .buttons-right{
+                                .hidden-button {
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+@media screen and (max-width: 374px) {
+    .main-search {
+        .main-search-container {
+            width: $movilwidth;
+            .filters {
+                padding: 0 1rem;
+                width: 25%;
+                .filters-control {
+                    h3 {
+                        font-size: 1rem;
+                    }
+                    h4 {
+                        font-size: 1rem;
+                        padding: 1rem 0.5rem;
+                        margin: 0;
+                    }
+                }
+            }
+            .results {
+                width: 75%;
+                .results-item {
+                    flex-direction: column;
+                    align-items: center;
+                    .results-item-img {
+                        img {
+                            width: 20rem;
+                            height: 20rem;
+                        }
+                        .results-img-arrow {
+                            padding: .5rem 1rem;
+                            bottom: 1.2rem;
+                        }
+                    }
+                    .results-item-description {
+                        h3 {
+                            margin-left: 0;
+                            font-size: 1.5rem;
+                        }
+                        .results-text {
+                            height: 9rem;
+                        }
+                        .buttons-results {
+                            .buttons-right{
+                                .hidden-button {
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
     }
 }
